@@ -31,6 +31,7 @@ Bugs fixed
 - Issue #84 - Wi-Fi removing wrong header due to copy-paste error
 - wifi: a zero value for the backoff timer might be discarded and a new value
   might be generated by an erroneous call to NotifyCollision().
+- Bug 2636 - Add to doxygen a list of all registered TypeIds
 
 Known issues
 ------------
